--- a/trello.html
+++ b/trello.html
@@ -13,10 +13,18 @@
 </head>
 
 <body>
-    <select id="select" name="org_id"></select>
-    <ul id="check-lists">
+    <div>
+        <select id="select" name="trello_id"></select>
+        <ul id="check-lists">
 
-    </ul>
+        </ul>
+    </div>
+     <div>
+        <select id="select" name="trello_id"></select>
+        <ul id="check-lists">
+
+        </ul>
+    </div>
 </body>
 
 </html>
